2012-09-06  Dan Bernstein  <mitz@apple.com>

        REGRESSION(r127712): It broke http/tests/xmlhttprequest/basic-auth.html on JSC platforms
        https://bugs.webkit.org/show_bug.cgi?id=95972

        Removed the failing test from the skipped list.

        * platform/qt/Skipped:

2012-09-06  Mikhail Pozdnyakov  <mikhail.pozdnyakov@intel.com>

        [EFL] Gardening after r127728, r127534
        https://bugs.webkit.org/show_bug.cgi?id=95975

        Unreviewed gardening.

        Following tests were added to TestExpectations:
        http/tests/xmlhttprequest/basic-auth.html fails after r127728.
        fast/innerHTML/innerHTML-iframe.html fails after r127534.

        * platform/efl/fast/innerHTML/innerHTML-iframe-expected.txt: Removed.
        * platform/efl/TestExpectations:

2012-09-06  Ilya Tikhonovsky  <loislo@chromium.org>

        Unreviewed rebaseline for Web Inspector NMI test. It was broken at r127738.

        * inspector/profiler/memory-instrumentation-cached-images-expected.txt:
        * inspector/profiler/memory-instrumentation-cached-images.html:

2012-09-06  Christophe Dumez  <christophe.dumez@intel.com>

        [WKTR] addSelectionKey should be mapped to "Control" modifiers on other OSes than Mac
        https://bugs.webkit.org/show_bug.cgi?id=95973

        Reviewed by Kenneth Rohde Christiansen.

        Unskip several test cases that are passing on WebKit2
        now that "addSelectionKey" is properly mapped to
        "Control" modifier on other OSes than Mac OS X, in
        WKTR's EventSender.

        * platform/efl-wk2/TestExpectations:
        * platform/gtk-wk2/Skipped:
        * platform/win-wk2/Skipped:

2012-09-06  Mikhail Pozdnyakov  <mikhail.pozdnyakov@intel.com>

        CSS 3 'overflow-wrap' property implementation
        https://bugs.webkit.org/show_bug.cgi?id=94475

        Reviewed by Ojan Vafai.

        Added 'overflow-wrap' property implementation according to